--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -3,4 +3,21 @@ name: My Github WorkFlow
 run-name: ${{github.actor}} initiated a workflow.
 
 on:
-  - push
+  push:
+    branches:
+      - master
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: rsync deployments
+        uses: burnett01/rsync-deployments@6.0.0
+        with:
+          switches: -avzr --delete
+          path: ./*
+          remote_path: /var/www/html/
+          remote_host: 34.229.129.13
+          remote_user: ubuntu
+          remote_key: ${{ secrets.SSH_KEY }}
