--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           switches: -avzr --delete
           path: ./*
-          remote_path: /var/www/html/
+          remote_path: /var/www/html/test
           remote_host: 34.229.129.13
           remote_user: ubuntu
           remote_key: ${{ secrets.SSH_KEY }}
